AI api gemini and filter date time

--- a/Frontend/HTML/dashboard.html
+++ b/Frontend/HTML/dashboard.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT Skills Final Project</title>
     <link rel="stylesheet" href="../CSS/main-content.css">
-
+    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="stylesheet" href="../CSS/data.css">
+    <link rel="stylesheet" href="../CSS/settings.css">
     <link rel="stylesheet" href="../CSS/side-bar.css">
 </head>
 
