--- a/Frontend/HTML/pages/home.html
+++ b/Frontend/HTML/pages/home.html
@@ -4,12 +4,12 @@
         <h1>Welcome to our project</h1>
         
         <div class = "device-status">
-             <div id="reed-status" class = "status">
+             <!-- <div id="reed-status" class = "status">
                 <p>Reed</p>
                 <image src="assets/close_lock.png" alt="Reed Status" class="status-icon"
                 id = "reed-status-icon">
                 <p id = "reed-text">🔒 Cửa đang đóng</p>    
-            </div>
+            </div> -->
             <div id="pir-status" class = "status">
                 <p>Pir</p>
                 <image src="assets/no_motion.png" alt="PIR Status" class="status-icon"
