--- a/Frontend/HTML/login.html
+++ b/Frontend/HTML/login.html
@@ -26,7 +26,7 @@
     <div class = "sign-up-form">
         <div class = "login-grid">
             <input type="text" class="login-input" placeholder="Username" id = "account-register"><br>
-            <input type="text" class="login-input" placeholder="Phone number" id = "phone-number"><br>
+            <input type="text" class="login-input" placeholder="Email" id = "email-register"><br>
             <div class ="password-container">
                 <input type="password" class="login-input" placeholder = "Password" id = "password-register">
                 <span class = "toggle-password" id = "toggle-password-register" onclick = "togglePasswordVisibilityRegister()"></span>
