--- a/Frontend/HTML/pages/data.html
+++ b/Frontend/HTML/pages/data.html
@@ -35,7 +35,7 @@
         <div class = "date-container">
 
             <div class = "date-block">
-                <label for="date-chart" class = "date-label">Select End Date:</label>
+                <label for="date-chart" class = "date-label">Select Date:</label>
                 <input type="date" id="date-chart" class="date-input">
             </div>
             <button id="update-date-chart2" class="data-button" onclick = "updateChart2()">Filter</button>
