super chatbot and valid data for cloud

--- a/Frontend/HTML/dashboard.html
+++ b/Frontend/HTML/dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../CSS/settings.css">
     <link rel="stylesheet" href="../CSS/side-bar.css">
     <link rel="stylesheet" href="../CSS/chat-bot.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 </head>
 
 <body>
