--- a/Frontend/HTML/pages/settings.html
+++ b/Frontend/HTML/pages/settings.html
@@ -25,10 +25,10 @@
             <div class = "switch-container">
                 <h2>LCD Status</h2>
                 <select id="lcd-select" class = "lcd-select" onchange="updateLcdStatus(this.value); sendCommandToDevices()">
-                    <option value = '0' >Chống Trộm</option>
-                    <option value = '1' >Gia chủ</option>
+                    <option value = '0' >Armed Mode</option>
+                    <option value = '1' >Home Mode</option>
                 </select>
-                <h2>LCD: <span id="lcd-status">Chống Trộm Mode</span></h2>
+                <h2>LCD: <span id="lcd-status">Armed Mode</span></h2>
 
             </div>
             <!-- <div class = "switch-container">
